--- a/src/app/shared/components/ag-grid/grid-app/grid-app.component.html
+++ b/src/app/shared/components/ag-grid/grid-app/grid-app.component.html
@@ -1,7 +1,6 @@
 <ag-grid-angular
-    style="width: 500px; height: 500px;"
+    style="width: 100%; height: 100%; margin: 10px;"
     class="ag-theme-alpine"
-    [rowData]="rowData"
-    [columnDefs]="columnDefs"
+    [gridOptions]="gridOptions"
     >
 </ag-grid-angular>
